Refine Alessandra test visuals and detail modal

--- a/index.html
+++ b/index.html
@@ -61,20 +61,44 @@
         <div class="chart" role="img" aria-label="Resultado en los cuatro cuadrantes">
           <div class="grid-labels grid-labels-y">
             <span>+9</span>
+            <span>+8</span>
+            <span>+7</span>
             <span>+6</span>
+            <span>+5</span>
+            <span>+4</span>
             <span>+3</span>
+            <span>+2</span>
+            <span>+1</span>
             <span>0</span>
+            <span>-1</span>
+            <span>-2</span>
             <span>-3</span>
+            <span>-4</span>
+            <span>-5</span>
             <span>-6</span>
+            <span>-7</span>
+            <span>-8</span>
             <span>-9</span>
           </div>
           <div class="grid-labels grid-labels-x">
             <span>-9</span>
+            <span>-8</span>
+            <span>-7</span>
             <span>-6</span>
+            <span>-5</span>
+            <span>-4</span>
             <span>-3</span>
+            <span>-2</span>
+            <span>-1</span>
             <span>0</span>
+            <span>+1</span>
+            <span>+2</span>
             <span>+3</span>
+            <span>+4</span>
+            <span>+5</span>
             <span>+6</span>
+            <span>+7</span>
+            <span>+8</span>
             <span>+9</span>
           </div>
           <div class="axis-label axis-label-top">S (+)</div>
